[metadata]
name = crypton
description = crypt with crypton
author = Batuhan INAN
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
version = 1.0
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    affine
    block
    utils

install_requires =
    numpy>=1.21
python_requires = >=3.7

package_dir =
    =crypton
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
crypton = py.typed

[flake8]
max-line-length = 160